# KLSM-MQ_CAPQ-Galois

./: .gitignore  README.md
galois/: .gitignore  CMakeLists.txt  build_macro.sh  compare-results.py  compare-runs.py  csv.py  csv_viewer.sh  kessler_benchmark_test.sh  night_script.py  prio-csv.py  result.txt  results_example.csv  run-metrics.sh  run.py  run_metrics_macro.sh
galois/apps/: CMakeLists.txt
galois/include/Galois/WorkList/capq/capq_c_library/: CMakeLists.txt  capq.c  cppcapq.h  cppcapq_inl.h
galois/results/: baseline.csv  createCSV.py  galois_results.ipynb  new.csv  sssp-klsm2048.twitter40.d8_176_libc.txt  sssp-klsm4096.twitter40.d8_176_libc.txt  sssp-obim.planar10M.d8_176_libc.txt
galois/resultsFirstRunOnRack/: sssp-klsm1.USA-road-d.USA.d8_16_libc.txt  sssp-klsm1.USA-road-d.USA.d8_176_libc.txt  sssp-klsm1.USA-road-d.USA.d8_32_libc.txt  sssp-klsm1.USA-road-d.USA.d8_88_libc.txt  sssp-klsm1.USA-road-t.USA.d8_16_libc.txt  sssp-klsm1.USA-road-t.USA.d8_32_libc.txt  sssp-klsm1.USA-road-t.USA.d8_88_libc.txt  sssp-klsm1.clique4000.d8_176_libc.txt  sssp-klsm1.clique4000.d8_88_libc.txt  sssp-klsm1.ljournal-2008.d8_16_libc.txt  sssp-klsm1.ljournal-2008.d8_176_libc.txt  sssp-klsm1.ljournal-2008.d8_88_libc.txt  sssp-klsm1.planar10M.d8_16_libc.txt  sssp-klsm1.planar10M.d8_32_libc.txt  sssp-klsm1.r4-2e24.d8_16_libc.txt  sssp-klsm1.r4-2e24.d8_176_libc.txt  sssp-klsm1.r4-2e26.d8_176_libc.txt  sssp-klsm1.r4-2e26.d8_88_libc.txt  sssp-klsm1.rmat16p-2e24.d8_176_libc.txt  sssp-klsm1.rmat16p-2e24.d8_88_libc.txt  sssp-klsm1.rmat16p-2e27.d8_88_libc.txt  (+247 more)
galois/src/: Barrier.cpp  (+5 more)
(+1562 files in other folders)
